--- a/index.html
+++ b/index.html
@@ -425,8 +425,8 @@ top:-2px}
   <div class="left">
    <div class="lefttop"></div>
    <div class="leftbottom">
-     <h3>PAUL SIMON</h3>
-     <span>Graphic designer</span>
+     <h3>VIKAS A L</h3>
+     <span>Computer Science Engineer</span>
      <h4 class=personal>
     PERSONAL INFO
      </h4>
