--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ $bars.eq(4).animate({width: "40%"}, 2500);
           <h1 class="underlineTxt"> About Me </h1>
           <p> Hi Everyone!
             <p/>
-            <p>I am from Mangalore. Im studying computer science engineering in ALVA's Institute of Engineering and Technology in moodubidri,mijar. </p>
+            <p>I am from Mangalore. Studying computer science engineering in ALVA's Institute of Engineering and Technology in moodubidri,mijar. </p>
 
         </div>
 
