--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0">
 
-  <title> VIKAS A L </title>
+  <title> VIKAS </title>
   <style>
     .container {
   background-image: linear-gradient(
