--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0">
 
   <title> VIKAS A L</title>
-  
-    <script>
+   <script type="text/javascript">
   var height1 = $(window).width();
 $(".container").css("height", height1);
 
