--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0">
 
-  <title> VIKAS A L</title>
+  <title> VIKAS </title>
+  
+  
    <script type="text/javascript">
   var height1 = $(window).width();
 $(".container").css("height", height1);
