--- a/index.html
+++ b/index.html
@@ -99,15 +99,81 @@ ul li p a {
   height: 15px;
   overflow: hidde;
 }
-
 .slider{
-  width:60%;
+  width:80%;
   height:74%;
   background-color: RGB(166,170,169);
   border: 2px solid  rgba(0,0,0,0);
   background-clip: padding-box;
   border-radius: 6px;
 }
+.slider1{
+  width:74%;
+  height:74%;
+  background-color: RGB(166,170,169);
+  border: 2px solid  rgba(0,0,0,0);
+  background-clip: padding-box;
+  border-radius: 6px;
+}
+
+.slider2{
+  width:90%;
+  height:74%;
+  background-color: RGB(166,170,169);
+  border: 2px solid  rgba(0,0,0,0);
+  background-clip: padding-box;
+  border-radius: 6px;
+}
+.slider3{
+  width:70%;
+  height:74%;
+  background-color: RGB(166,170,169);
+  border: 2px solid  rgba(0,0,0,0);
+  background-clip: padding-box;
+  border-radius: 6px;
+}
+.slider4{
+  width:35%;
+  height:74%;
+  background-color: RGB(166,170,169);
+  border: 2px solid  rgba(0,0,0,0);
+  background-clip: padding-box;
+  border-radius: 6px;
+}
+.slider5{
+  width:33%;
+  height:74%;
+  background-color: RGB(166,170,169);
+  border: 2px solid  rgba(0,0,0,0);
+  background-clip: padding-box;
+  border-radius: 6px;
+}
+.slider6{
+  width:20%;
+  height:74%;
+  background-color: RGB(166,170,169);
+  border: 2px solid  rgba(0,0,0,0);
+  background-clip: padding-box;
+  border-radius: 6px;
+}
+.slider7{
+  width:40%;
+  height:74%;
+  background-color: RGB(166,170,169);
+  border: 2px solid  rgba(0,0,0,0);
+  background-clip: padding-box;
+  border-radius: 6px;
+}
+.slider8{
+  width:30%;
+  height:74%;
+  background-color: RGB(166,170,169);
+  border: 2px solid  rgba(0,0,0,0);
+  background-clip: padding-box;
+  border-radius: 6px;
+}
+
+
 
 .education{
   
@@ -126,8 +192,8 @@ ul li p a {
 
 p.bold{
   font-size:1.4em;
-  margin-bottom:0px;
-  font-weight: 500;
+  margin-bottom:9px;
+  font-weight: 600;
 }
 p.date{
   margin-top: 5px;
@@ -210,26 +276,25 @@ a.icon:hover{
 </style>
 
 
-
 <div class="container">
   <div class="left-col">
 
     <div class="photo"><img src="https://s3.amazonaws.com/37assets/svn/765-default-avatar.png" alt="photo" /></div>
     <div class="name">
-      <h1><span>Otravu</span><span> Juma</span>
+      <h1><span>VIKAS</span><span> A L</span>
       </h1>
     </div>
     <div class="personalInfo">
       <h2>personal info</h2>
       <ul class="info">
         <li><i class="fa fa-home "></i>
-          <p>Adress, Zip City</p>
+          <p>Mangalore</p>
         </li>
         <li><i class="fa fa-phone"></i>
-          <p>09XX XXX XXX</p>
+          <p>(+91) 8971643272</p>
         </li>
         <li><i class="fa fa-envelope"></i>
-          <p>mail@mail.com</p>
+          <p>vrao0899@gmail.com</p>
         </li>
         <li><i class="fa fa-globe"></i>
           <p><a href="#">www.xxxxx.xxx</a></p>
@@ -242,13 +307,19 @@ a.icon:hover{
         <li><i class="fa fa-language"></i>
           <p>English</p>
           <div class="bar">
-            <div class="slider"></div>
+            <div class="slider1"></div>
           </div>
         </li>
         <li><i class="fa fa-language"></i>
-          <p>Rofl</p>
+          <p>Hindi</p>
           <div class="bar">
             <div class="slider"></div>
+          </div>
+        </li>
+         <li><i class="fa fa-language"></i>
+          <p>Kannada</p>
+          <div class="bar">
+            <div class="slider2"></div>
           </div>
         </li>
       </ul>
@@ -257,16 +328,16 @@ a.icon:hover{
       <h2>Hobbies / Intrests</h2>
       <ul>
         <li><i class="fa fa-film"></i>
-          <p>Movies / TV shows</p>
+          <p>Movies </p>
         </li>
         <li><i class="fa fa-bicycle"></i>
           <p>Sports</p>
         </li>
         <li><i class="fa fa-cube"></i>
-          <p>3D Modeling</p>
+          <p>Reading books</p>
         </li>
         <li><i class="fa fa-rocket"></i>
-          <p>Traveling</p>
+          <p>Gaming</p>
         </li>
         <li><i class="fa fa-music"></i>
           <p>Music</p>
@@ -280,100 +351,66 @@ a.icon:hover{
         <i class="fa fa-graduation-cap fa-3x"></i>
         <h2>Education</h2>
       </div>
-      <p class="bold">School, City</p>
-      <p class="date">Years, field of study</p>
-      <p class="bold">School, City</p>
-      <p class="date">Years, field of study</p>
+      <p class="bold">ALVA's Institute of Engineering and Technology 
+</p>
+      <p class="date">Computer science and Engineering <br>
+Currently studying</p>
+      
+      <p class="bold">SDM PU College Ujire
+</p>
+      <p class="date">2015 - 2017</p>
     </div>
-    <div class="workExperiences">
-      <div class="header">
-        <i class="fa fa-briefcase fa-3x"></i>
-        <h2>Work experience</h2>
-      </div>
-      <p class="bold">JOB</p>
-      <p class="date">Date, position</p>
-      <p class="bold">JOB</p>
-      <p class="date">Date, position</p>
-      <p class="bold">JOB</p>
-      <p class="date">Date, position</p>
-    </div>
+   
     <div class="skills">
       <div class="header">
         <i class="fa fa-code fa-3x"></i>
-        <h2>Skills</h2>
+        <h2>Programming Skills</h2>
       </div>
       <ul class="main">
-        <li>
-          <p>CSS</p>
+         <li>
+          <p>C </p>
           <div class="bar">
-            <div class="slider"></div>
+            <div class="slider3"></div>
           </div>
         </li>
         <li>
           <p>HTML</p>
           <div class="bar">
-            <div class="slider"></div>
+            <div class="slider4"></div>
           </div>
         </li>
         <li>
           <p>JavaScript</p>
           <div class="bar">
-            <div class="slider"></div>
+            <div class="slider5"></div>
           </div>
         </li>
         <li>
-          <p>C</p>
+          <p>CSS</p>
           <div class="bar">
-            <div class="slider"></div>
+            <div class="slider6"></div>
           </div>
         </li>
         <li>
           <p>C++</p>
           <div class="bar">
-            <div class="slider"></div>
+            <div class="slider7"></div>
           </div>
         </li>
         <li>
-          <p>PhotoShop</p>
+          <p>Python</p>
           <div class="bar">
-            <div class="slider"></div>
+            <div class="slider8"></div>
           </div>
         </li>
-        <li>
-          <p>Blender / Maya</p>
-          <div class="bar">
-            <div class="slider"></div>
-          </div>
-        </li>
-        <li>
-          <p>Angular 2+</p>
-          <div class="bar">
-            <div class="slider"></div>
-          </div>
-        </li>
-        <li>
-          <p>NodeJS</p>
-          <div class="bar">
-            <div class="slider"></div>
-          </div>
-        </li>
-
       </ul>
     </div>
-    <div class="projects">
-      <div class="header">
-        <i class="fa fa-folder-open fa-3x"></i>
-        <h2>Projects</h2>
-      </div>
-      <ul class="main">
-        <li><a href=""><h3>CODE</h3></a></li>
-        <li><a href=""><h3>3D</h3></a></li>
-      </ul>
-    </div>
+   
+    
   </div>
 </div>
-<footer>
-  <h4>Otravu Juma © 2017.</h4>
+<footer>VIKAS A L.
+  <h4></h4>
     <a class="icon" target="_blank" href="https://www.linkedin.com">
       <i class="fa fa-linkedin"></i></a>
     <a class="icon" target="_blank" href="https://github.com/accmail">
