--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ ul li p a {
   border-radius: 6px;
 }
 .slider8{
-  width:30%;
+  width:66%;
   height:74%;
   background-color: RGB(166,170,169);
   border: 2px solid  rgba(0,0,0,0);
@@ -296,9 +296,9 @@ a.icon:hover{
         <li><i class="fa fa-envelope"></i>
           <p>vrao0899@gmail.com</p>
         </li>
-        <li><i class="fa fa-globe"></i>
+        <!--<li><i class="fa fa-globe"></i>
           <p><a href="#">www.xxxxx.xxx</a></p>
-        </li>
+        </li>-->
       </ul>
     </div>
     <div class="language">
@@ -325,7 +325,7 @@ a.icon:hover{
       </ul>
     </div>
     <div class="hobbies">
-      <h2>Hobbies / Intrests</h2>
+      <h2>Hobbies / Interests</h2>
       <ul>
         <li><i class="fa fa-film"></i>
           <p>Movies </p>
@@ -398,7 +398,7 @@ Currently studying</p>
           </div>
         </li>
         <li>
-          <p>Python</p>
+          <p>JAVA</p>
           <div class="bar">
             <div class="slider8"></div>
           </div>
