--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
     <div class="container">
     <div class="left-col">
 
-        <div class="photo"><img src="Vikas A L.jpg" alt="photo" /></div>
+        <div class="photo"><img src="https://www.instagram.com/p/BwRpZW_hmCugnuoqLwKxQqAEXSHhlP--yGKct80/" alt="photo" /></div>
         <div class="name">
         <h1><span>VIKAS</span><span> A L</span>
         </h1>
