--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
     <div class="container">
     <div class="left-col">
 
-        <div class="photo"><img src="https://github.com/VikasAL/VikasAL.github.io/blob/master/Vikas%20A%20L.jp"  alt="photo" /></div>
+        <div class="photo"><img src="https://github.com/VikasAL/VikasAL.github.io/blob/master/Vikas%20A%20L.jpg"  alt="photo" /></div>
         <div class="name">
         <h1><span>VIKAS</span><span> A L</span>
         </h1>
